# c-homework8

./: CMakeLists.txt  bayan.cpp  bayan.h  hasher.cpp  hasher.h  main.cpp  utils.cpp  utils.h
.github/workflows/: release.yml
